@@ -2,3 +2,6 @@ Dieser Branch ist noch in Entwicklung und noch nicht für den produktiven Einsat
 
 dev05:
  - PG Detail-Statistiken hinzugefügt
+
+ dev06:
+  - Optik der PG Detail-Statistiken angepasst
